# Gdg-AI-msi-hack

./: .gitignore  BackendPlan.md  README.md  ideaSeba.md  infernceclass.md  output.txt  pyproject.toml  seld_project_brief.md  test_pipeline.py  todo  wireBackendFrontendPlan.md
.github/skills/design/: SKILL.md
backend/: main.py  requirements.txt  test_pipeline.py
backend/contracts/: config.py  types.py
backend/modules/doa/: distance.py  engine.py  interface.py  mock.py
backend/modules/llm/: __init__.py  interface.py  mock.py
backend/modules/sed/: __init__.py  inference.py  interface.py  mock.py  model.py  ontology.py
backend/pipeline/: alignment.py  audio_io.py  event_bus.py  event_grouper.py  file_runner.py  orchestrator.py
backend/scripts/: benchmark_latency.py  prune_deps.sh  record_audio.py  test_doa.py  test_with_audio_file.py  try_clip.py
backend/tests/: test_inference_smoke.py  test_llm.py  test_ontology.py  test_types.py
demo/: demo.json
doa/: Test_shout.m4a  doa_engine.py  record_audio.py  test_doa.py
docs/: FrontendPlan.md  PretrainedSED_Classes_Reference.md  PretrainedSED_Implementation.md  infernceclass.md  seld_project_brief.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src-tauri/: tauri.conf.json
scripts/: benchmark_latency.py  setup_pretrainedsed.sh  try_clip.py
src/sed/: __init__.py  inference.py  model.py  ontology.py  types.py
tests/: conftest.py  test_inference_smoke.py  test_ontology.py  test_types.py
tests/assets/: Test clap.m4a  Test metal.m4a
(+18 files in other folders)
